--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "keywords": [],
   "author": "HobaPro",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "mongoose": "^6.0.12"
   }
